crates/toml/tests/snapshots/invalid/integer/capital-hex.stderr
TOML parse error at line 1, column 15
  |
1 | capital-hex = 0X1
  |               ^^
radix must be lowercase, expected `0x`
